// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`buttonUtils > getErrorContainedButton 1`] = `
<button
  class="px-2 py-1 text-sm text-white font-medium rounded disabled:opacity-50 disabled:cursor-not-allowed disabled:bg-gray-400 focus:outline-none focus:ring-2 focus:ring-offset-2 whitespace-nowrap bg-red-600 hover:bg-red-700 focus:ring-red-500"
  type="button"
/>
`;

exports[`buttonUtils > getIconButton with onClick 1`] = `
<button
  class="px-3 py-1 border border-blue-500 text-blue-500 bg-transparent rounded-md hover:bg-blue-500 hover:text-white focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-offset-2 disabled:opacity-50 disabled:cursor-not-allowed whitespace-nowrap"
  type="button"
>
  <svg
    fill="currentColor"
    height="1em"
    stroke="currentColor"
    stroke-width="0"
    viewBox="0 0 24 24"
    width="1em"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M0 0h24v24H0z"
      fill="none"
    />
    <path
      d="M12 4.5C7 4.5 2.73 7.61 1 12c1.73 4.39 6 7.5 11 7.5s9.27-3.11 11-7.5c-1.73-4.39-6-7.5-11-7.5zM12 17c-2.76 0-5-2.24-5-5s2.24-5 5-5 5 2.24 5 5-2.24 5-5 5zm0-8c-1.66 0-3 1.34-3 3s1.34 3 3 3 3-1.34 3-3-1.34-3-3-3z"
    />
  </svg>
</button>
`;

exports[`buttonUtils > getIconButton without onClick 1`] = `
<button
  class="px-3 py-1 border border-blue-500 text-blue-500 bg-transparent rounded-md hover:bg-blue-500 hover:text-white focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-offset-2 disabled:opacity-50 disabled:cursor-not-allowed whitespace-nowrap"
  type="button"
>
  <svg
    fill="currentColor"
    height="1em"
    stroke="currentColor"
    stroke-width="0"
    viewBox="0 0 24 24"
    width="1em"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M0 0h24v24H0z"
      fill="none"
    />
    <path
      d="M12 4.5C7 4.5 2.73 7.61 1 12c1.73 4.39 6 7.5 11 7.5s9.27-3.11 11-7.5c-1.73-4.39-6-7.5-11-7.5zM12 17c-2.76 0-5-2.24-5-5s2.24-5 5-5 5 2.24 5 5-2.24 5-5 5zm0-8c-1.66 0-3 1.34-3 3s1.34 3 3 3 3-1.34 3-3-1.34-3-3-3z"
    />
  </svg>
</button>
`;

exports[`buttonUtils > getIconSubmitButton with onClick 1`] = `
<button
  class="px-3 py-1 border border-blue-500 text-blue-500 bg-transparent rounded-md hover:bg-blue-500 hover:text-white focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-offset-2 disabled:opacity-50 disabled:cursor-not-allowed whitespace-nowrap"
  type="submit"
>
  <svg
    fill="currentColor"
    height="1em"
    stroke="currentColor"
    stroke-width="0"
    viewBox="0 0 24 24"
    width="1em"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M0 0h24v24H0z"
      fill="none"
    />
    <path
      d="M12 4.5C7 4.5 2.73 7.61 1 12c1.73 4.39 6 7.5 11 7.5s9.27-3.11 11-7.5c-1.73-4.39-6-7.5-11-7.5zM12 17c-2.76 0-5-2.24-5-5s2.24-5 5-5 5 2.24 5 5-2.24 5-5 5zm0-8c-1.66 0-3 1.34-3 3s1.34 3 3 3 3-1.34 3-3-1.34-3-3-3z"
    />
  </svg>
</button>
`;

exports[`buttonUtils > getIconSubmitButton without onClick 1`] = `
<button
  class="px-3 py-1 border border-blue-500 text-blue-500 bg-transparent rounded-md hover:bg-blue-500 hover:text-white focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-offset-2 disabled:opacity-50 disabled:cursor-not-allowed whitespace-nowrap"
  type="submit"
>
  <svg
    fill="currentColor"
    height="1em"
    stroke="currentColor"
    stroke-width="0"
    viewBox="0 0 24 24"
    width="1em"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M0 0h24v24H0z"
      fill="none"
    />
    <path
      d="M12 4.5C7 4.5 2.73 7.61 1 12c1.73 4.39 6 7.5 11 7.5s9.27-3.11 11-7.5c-1.73-4.39-6-7.5-11-7.5zM12 17c-2.76 0-5-2.24-5-5s2.24-5 5-5 5 2.24 5 5-2.24 5-5 5zm0-8c-1.66 0-3 1.34-3 3s1.34 3 3 3 3-1.34 3-3-1.34-3-3-3z"
    />
  </svg>
</button>
`;

exports[`buttonUtils > getPrimaryContainedButton 1`] = `
<button
  class="px-2 py-1 text-sm text-white font-medium rounded disabled:opacity-50 disabled:cursor-not-allowed disabled:bg-gray-400 focus:outline-none focus:ring-2 focus:ring-offset-2 whitespace-nowrap bg-blue-600 hover:bg-blue-700 focus:ring-blue-500"
  type="button"
/>
`;

exports[`buttonUtils > getPrimaryContainedButton with onClick 1`] = `
<button
  class="inline-flex items-center px-2 py-1 text-sm text-white font-medium rounded disabled:opacity-50 disabled:cursor-not-allowed disabled:bg-gray-400 focus:outline-none focus:ring-2 focus:ring-offset-2 whitespace-nowrap bg-blue-600 hover:bg-blue-700 focus:ring-blue-500"
  type="button"
/>
`;

exports[`buttonUtils > getPrimaryTextButton 1`] = `
<button
  class="bg-transparent text-sm px-2 py-1 rounded-md focus:outline-none focus:ring-2 focus:ring-offset-2 disabled:text-gray-400 disabled:cursor-not-allowed whitespace-nowrap text-blue-600 hover:text-blue-800 focus:ring-blue-500"
  type="button"
/>
`;

exports[`buttonUtils > getPrimaryTextSubmitButton 1`] = `
<button
  class="bg-transparent text-sm px-2 py-1 rounded-md focus:outline-none focus:ring-2 focus:ring-offset-2 disabled:text-gray-400 disabled:cursor-not-allowed whitespace-nowrap text-blue-600 hover:text-blue-800 focus:ring-blue-500"
  type="submit"
/>
`;

exports[`buttonUtils > getSecondaryContainedButton 1`] = `
<button
  class="px-2 py-1 text-sm text-white font-medium rounded disabled:opacity-50 disabled:cursor-not-allowed disabled:bg-gray-400 focus:outline-none focus:ring-2 focus:ring-offset-2 whitespace-nowrap bg-green-600 hover:bg-green-700 focus:ring-green-500"
  type="button"
/>
`;

exports[`buttonUtils > getSecondaryTextButton 1`] = `
<button
  class="bg-transparent text-sm px-2 py-1 rounded-md focus:outline-none focus:ring-2 focus:ring-offset-2 disabled:text-gray-400 disabled:cursor-not-allowed whitespace-nowrap text-green-600 hover:text-green-700 focus:ring-green-500"
  type="button"
/>
`;
